CODE/web_architecture/RDS.tf
resource "aws_db_subnet_group" "main" {
        name          = "${var.project_name}-db-subnet-group"
        subnet_ids    = aws_subnet.private[*].id

        tags = { Name = "${var.project_name}-db-subnet-group" }
}


resource "aws_db_instance" "main" {
        identifier = "${var.project_name}-db"

        engine         = "mysql"
        engine_version = "8.0"

        instance_class = var.db_instance_class
        allocated_storage = 20
        storage_type      = "gp2"


        db_name  = var.db_name
        username = var.db_username 
        password = var.db_password

        db_subnet_group_name = aws_db_subnet_group.main.name
        vpc_security_group_ids = [aws_security_group.rds.id]

        multi_az            = false
        publicly_accessible = false
        skip_final_snapshot = true
        
        tags = { Name = "${var.project_name}-db" }
}
